fixed bugs and layout issues

--- a/src/Components/Project/Project.module.scss
+++ b/src/Components/Project/Project.module.scss
@@ -12,7 +12,7 @@
   &:nth-child(odd) &__picture {
     order: 1;
 
-    @include respond(phone) {
+    @include respond(phone-large) {
       order: 0;
     }
   }
@@ -22,7 +22,7 @@
     padding-right: 2rem;
   }
 
-  @include respond(phone) {
+  @include respond(phone-large) {
     flex-direction: column;
   }
 
@@ -56,7 +56,7 @@
     border-radius: .3rem;
     transition: all .3s;
 
-    @include respond(phone) {
+    @include respond(phone-large) {
       margin-bottom: 2rem;
       max-height: 20rem;
     }
@@ -129,7 +129,7 @@
     flex-direction: column;
     padding-left: 2rem;
 
-    @include respond(phone) {
+    @include respond(phone-large) {
       padding: 0;
     }
   }
@@ -164,7 +164,7 @@
   font-size: 1.8rem;
   margin-bottom: 1rem;
 
-  @include respond(tab-port) {
+  @include respond(phone) {
     flex-direction: column;
   }
 
